Extended Note API for text notes, unified table for note pages
